--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,4 +17,55 @@ body > .container {
   color: white;
 }
 
+.tags li {
+  float: left;
+}
+
+.tag {
+  background: #bfbcbc;
+  border-radius: 3px 0 0 3px;
+  color: #838181;
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color 0.2s;
+}
+
+.tag::before {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+  content: '';
+  height: 6px;
+  left: 10px;
+  position: absolute;
+  width: 6px;
+  top: 10px;
+}
+
+.tag::after {
+  background: #fff;
+  border-bottom: 13px solid transparent;
+  border-left: 10px solid #bfbcbc;
+  border-top: 13px solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.tag:hover {
+  background-color: #3097D1;
+  color: white !important;
+}
+
+.tag:hover::after {
+  border-left-color: #3097D1;
+  color: white;
+}
+
 /*# sourceMappingURL=app.css.map */
